.github/lean_quality/fixtures/research_legacy_refs/negative/indirect/Formal/AG/Research/Basic.lean
def researchIndirect : Nat := 0
